# esp32s3_file_server

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/config_db/: CMakeLists.txt  config_db.c
components/config_db/include/: config_db.h
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
components/nvs_util/: CMakeLists.txt  nvs_util.c
components/nvs_util/include/: nvs_util.h
components/wifi_util/: CMakeLists.txt  wifi_intf.c
components/wifi_util/include/: wifi_intf.h
docs/: e2e_test_report.org
main/: CMakeLists.txt  Kconfig.projbuild  esp32s3_file_server.c  file_server.c  file_serving_example_common.h  idf_component.yml  main.c  mount.c  mount_sdcard.c  mount_sdcard.h  upload_script.html
web/: package.json
web/public/: index.html
web/src/: App.vue
web/src/router/: index.js
web/src/views/: Config.vue  FileExplorer.vue
